# punto

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: test.yaml
lib_commands/: Cargo.toml
lib_commands/src/: lib.rs  single_command.rs
lib_fileops/: Cargo.toml
lib_fileops/src/: file_operations.rs  lib.rs
src/: ArgParser.rs  CommandProcessor.rs  DirSync.rs  Downloader.rs  Installer.rs  SingleCommand.rs  YamlProcessor.rs  main.rs
src/Commands/: mod.rs  parsers.rs
src/DirSync/: dir_block.rs  dir_file_type.rs  directories_descr.rs  file_operations.rs  mod.rs  parsers.rs
